# teste_actions

./: .pre-commit-config.yaml  README.md  _print.py  pyproject.toml  teste.py
.github/workflows/: print.yml
csv/: dataframe.csv
