[tool.poetry]
name = "teste-actions"
version = "0.1.0"
description = ""
authors = ["Gustavo Correa <gustavo.araujo.correa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
taskipy = "^1.14.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort teste.py
black teste.py
flake8 teste.py
"""